# demo/docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  rest.Paging:
+    properties:
+      metaInfo:
+        items:
+          $ref: '#/definitions/rest.UserInfo'
+        type: array
+      totalNum:
+        type: integer
+    type: object
   rest.RegisterInfo:
     properties:
       email:
@@ -29,10 +38,49 @@ definitions:
     - registerType
     - repeatPassword
     type: object
+  rest.Result:
+    properties:
+      code:
+        type: integer
+      data: {}
+      msg: {}
+    type: object
+  rest.UserInfo:
+    properties:
+      id:
+        type: string
+      nickName:
+        type: string
+      registerTime:
+        type: string
+      updateTime:
+        type: string
+      userStatus:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
-  /user/register:
+  /api/v1/:id/user:
+    get:
+      description: 用户详情
+      parameters:
+      - description: 用户id
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.Result'
+            - properties:
+                data:
+                  $ref: '#/definitions/rest.UserInfo'
+              type: object
+  /api/v1/user/register:
     post:
       consumes:
       - application/json
@@ -48,7 +96,50 @@ paths:
       - application/json
       responses:
         "200":
-          description: '{"msg": ""}'
+          description: OK
           schema:
-            type: string
+            allOf:
+            - $ref: '#/definitions/rest.Result'
+            - properties:
+                data:
+                  type: string
+              type: object
+  /api/v1/users:
+    get:
+      description: 用户列表
+      parameters:
+      - description: 分页数量(默认15)
+        in: query
+        maximum: 100
+        minimum: 1
+        name: count
+        type: integer
+      - description: 非必传 但是传了之后需要满足tag对应的规则
+        in: query
+        maxLength: 30
+        minLength: 1
+        name: filterName
+        type: string
+      - description: 分页起始位置(默认0)
+        in: query
+        minimum: 0
+        name: index
+        type: integer
+      - enum:
+        - 1
+        - 2
+        in: query
+        name: userStatus
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.Result'
+            - properties:
+                data:
+                  $ref: '#/definitions/rest.Paging'
+              type: object
 swagger: "2.0"
