# demo/service/http_server/user_register.go
@@ -18,18 +18,18 @@ import (
 // @Param registerInfo body rest.RegisterInfo true "用户注册基本信息"
 // @Accept json
 // @Produce json
-// @Success 200 {object} json "{"msg": ""}"
-// @Router /user/register [post]
+// @Success 200 {object} rest.Result{data=string}
+// @Router /api/v1/user/register [post]
 func UserRegister(context *gin.Context) {
 	var registerInfo rest.RegisterInfo
 	// 这里是最简单的bind标签的使用
 	if err := context.ShouldBind(&registerInfo); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
+		context.JSON(http.StatusBadRequest, rest.Result{
+			Msg: err.Error(),
 		})
 		return
 	}
-	context.JSON(http.StatusOK, gin.H{
-		"msg": "注册成功",
+	context.JSON(http.StatusOK, rest.Result{
+		Data: "注册成功",
 	})
 }
